@@ -23,6 +23,17 @@ Version 1.9.3
        set or are otherwise set as readonly. (Stefan)
 - BUG: The column "SVN Statusnumber" showed sometimes
        the wrong value. (Stefan)
+- BUG: Repobrowser failed to properly detect SVNParentPath
+       pages which don't use xml output. (Stefan)
+- BUG: Adjusting externals used the wrong revision
+       if the external was copied itself but not
+       modified later. (Stefan)
+- BUG: The manual pre-commit hook script was executed with
+       an outdated or empty log message. (Stefan)
+- BUG: TortoiseIDiff only zoomed one image in overlap mode
+       when zooming with the Ctrl-mousewheel. (Stefan)
+- BUG: The tooltip of the tray icon mentioned commit monitor
+       instead of project monitor. (Stefan)
 
 Version 1.9.2
 - BUG: Performance issue if dragging lots of files
